--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Blogs</title>
 </head>
+
 <body>
-    <h1> Hello! <%= name %> </h1>
+    <%- include("components/Navbar") %>
+
+    <div style="padding: 1rem; text-align: center;">
+        <h1> Welcome to my blogs! </h1>
+        <h3> New blogs are coming soon :) </h3>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
