--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: color 0.2s ease;
+    transition: background-color 0.2s ease;
 }
 
 /* Navbar Styles */
@@ -80,7 +82,6 @@ nav #nav-brand {
     text-decoration: none;
     font-weight: 600;
     font-size: 1.5rem;
-    transition: color 0.2s ease;
     color: var(--text-color);
 }
 
@@ -92,7 +93,7 @@ nav #theme-toggle {
     border-radius: 0.5rem;
     padding: 0.4rem 0.8rem;
     font-size: 0.9rem;
-    transition: all 0.3s ease;
+    transition: all 0.2s ease;
     color: var(--text-color);
 }
 
